# Azure-Sphere-Developer-Learning-Path

./: .gitmodules  README.md
Lab_1_Visual_Studio_and_Azure_Sphere/: CMakeLists.txt  CMakeSettings.json  main.c  main.h
Lab_2_Send_Telemetry_to_Azure_IoT/: CMakeLists.txt  main.c  main.h
Lab_3_Device_Twins/: main.c  main.h
Lab_4_Direct_Methods/: CMakeLists.txt  main.c  main.h
Lab_5_FreeRTOS_Environment/: CMakeLists.txt
Lab_6_AzureRTOS_Environment/: CMakeLists.txt
Lab_6_AzureRTOS_Environment/tx/: CMakeLists.txt  CMakeSettings.json
Lab_7_Partnering_with_RTOS_environment/: CMakeLists.txt  main.c  main.h
LearningPathLibrary/: CMakeLists.txt
LearningPathLibrary/include/: device_twins.h
LearningPathLibrary/src/: azure_iot.c  terminate.c
samples/CO2_Monitor/: README.md
samples/CO2_Monitor/src/HighLevelApp/: CMakeLists.txt  app_manifest.json  buzzer_alert.c  buzzer_alert.h  co2_manager.c  co2_manager.h  connected_status.c  connected_status.h  connection_state.c  connection_state.h  hvac_status.c  hvac_status.h  main.c
samples/CO2_Monitor/src/HighLevelApp/Hardware/avnet_mt3620_sk/: azure_sphere_learning_path.json
samples/CO2_Monitor/src/HighLevelApp/Hardware/avnet_mt3620_sk/inc/hw/: azure_sphere_learning_path.h
samples/CO2_Monitor/src/HighLevelApp/Hardware/avnet_mt3620_sk_rev2/: azure_sphere_learning_path.json
samples/CO2_Monitor/src/HighLevelApp/Hardware/avnet_mt3620_sk_rev2/inc/hw/: azure_sphere_learning_path.h
samples/CO2_Monitor/src/HighLevelApp/Hardware/mt3620_rdb/: azure_sphere_learning_path.json
samples/CO2_Monitor/src/HighLevelApp/Hardware/mt3620_rdb/inc/hw/: azure_sphere_learning_path.h
samples/CO2_Monitor/src/HighLevelApp/Hardware/seeed_mt3620_mdb/: azure_sphere_learning_path.json
samples/CO2_Monitor/src/HighLevelApp/Hardware/seeed_mt3620_mdb/inc/hw/: azure_sphere_learning_path.h
samples/CO2_Monitor/src/HighLevelApp/embedded-scd/: CMakeLists.txt
samples/CO2_Monitor/src/HighLevelApp/embedded-scd/embedded-common/hw_i2c/: sensirion_hw_i2c_implementation.c
samples/LearnTV_IoT_Central/: README.md
samples/LearnTV_IoT_Central/AzureRTOS/: CMakeLists.txt
samples/LearnTV_IoT_Central/AzureRTOS/tx/: CMakeLists.txt  CMakeSettings.json
samples/LearnTV_IoT_Central/AzureSphereHL/: CMakeLists.txt
samples/LearnTV_IoT_Hub/end_to_end_demo_avnet/: CMakeLists.txt  README.md
samples/Ultrasonic-Rover/HL_App/: CMakeLists.txt  main.c  main.h
samples/Ultrasonic-Rover/LearningPathLibrary/: CMakeLists.txt
samples/Ultrasonic-Rover/LearningPathLibrary/include/: direct_methods.h  inter_core.h  terminate.h  timer.h
samples/azure_sphere_rover_bot/azure_sphere_FreeRTOS_rover/: CMakeLists.txt
samples/environment_monitor_sht31/environment-monitor/: main.c  main.h
samples/environment_monitor_sht31/environment-monitor-standalone/: CMakeLists.txt  main.h
samples/seeed_studio_grove_shield/: CMakeLists.txt  main.c  main.h
tools/: LICENSE
tools/AzureSphereScripts/: config.ps1  deploy_image.ps1
tools/build-tools/: build_all.ps1  update_config.ps1
tools/cmake/: azsphere_config.cmake
tools/device_status/: .env  device_status.py  run.ps1  run.sh
tools/git-utils/: submodule_common.ps1
